screenedge: reset timer when pointer leaves edge

Currently the edge erroneously triggers when the pointer repeatedly
enters and leaves the edge in short durations. Send all events to edges,
and reset the timer when pointer leaves edge. Add corresponding test.

BUG: 441892
FIXED-IN: 6.0.4


(cherry picked from commit 9ca69cf50c61eff8e9d83403661d7bfda73b8e69)